--- a/web/app/assets/stylesheets/components/me-form.scss
+++ b/web/app/assets/stylesheets/components/me-form.scss
@@ -8,4 +8,12 @@
       width: calc(100vw - 48px);
     }
   }
+
+  &__info {
+
+    & a {
+      color: $brand-color;
+      text-decoration: underline;
+    }
+  }
 }
