--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -43,7 +43,7 @@
   <% else %>
     <section class="me-section" style="margin: 0 auto 25px auto;">
       <div class="me-section__inner">
-        <h2>Categorias</h2> <br>
+        <h2 class="me-section__title">Categorias</h2>
         <div class="me-chip-set__wrapper">
           <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
             <% @categories.each do |category| %>
