--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<section class="me-section me-section--centralized">
+<section class="me-section me-section--centralized me-section--full-height">
   <div class="me-section__inner">
     <h2 class="me-section__title">Sugestões de usuários para seguir</h2>
     <%= render partial: 'components/user_suggestions', locals: {
