--- a/web/app/views/bot/onboarding.html.erb
+++ b/web/app/views/bot/onboarding.html.erb
@@ -1,5 +1,5 @@
 <section class="me-page is-animated">
-  <section class="me-section">
+  <section class="me-section me-section--full-height">
     <div class="me-section__inner">
       <%= render partial: 'components/swipable/swipable' %>
     </div>
