--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -1,29 +1,113 @@
-<h2>Sign up</h2>
+<%= javascript_pack_tag 'text-field', 'select', 'data-turbolinks-track': 'reload', defer: true %>
+<section class="me-page is-animated">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="me-section me-section--centralized-small me-section--full-height">
+    <div class="me-section__inner">
+      <% if alert %>
+        <div class="me-alert">
+          <%= alert %>
+        </div>
+      <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="me-form__info">
+        Já tem uma conta? <%= link_to 'Faça login', new_user_session_path %>
+      </div>
+
+      <h2>Criar conta com email</h2>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'me-form'}) do |f| %>
+        <%= devise_error_messages! %>
+
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
+                <%= f.text_field :name, autofocus: true, autocomplete: "name", required: true, class: 'mdc-text-field__input' %>
+                <div class="mdc-notched-outline">
+                  <div class="mdc-notched-outline__leading"></div>
+                  <div class="mdc-notched-outline__notch">
+                    <%= f.label :name, "Nome", {class: 'mdc-floating-label'} %>
+                  </div>
+                  <div class="mdc-notched-outline__trailing"></div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
+                <%= f.email_field :email, autocomplete: "email", required: true, class: 'mdc-text-field__input' %>
+                <div class="mdc-notched-outline">
+                  <div class="mdc-notched-outline__leading"></div>
+                  <div class="mdc-notched-outline__notch">
+                    <%= f.label :email, "Email", {class: 'mdc-floating-label'} %>
+                  </div>
+                  <div class="mdc-notched-outline__trailing"></div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
+                <%= f.password_field :password, autocomplete: "new-password", required: true, class: 'mdc-text-field__input' %>
+                <div class="mdc-notched-outline">
+                  <div class="mdc-notched-outline__leading"></div>
+                  <div class="mdc-notched-outline__notch">
+                    <%= f.label :password, "Senha (min. 6 caracteres)", {class: 'mdc-floating-label'} %>
+                  </div>
+                  <div class="mdc-notched-outline__trailing"></div>
+                </div>
+                <div class="mdc-line-ripple"></div>
+              </div>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, class: 'mdc-text-field__input' %>
+                <div class="mdc-notched-outline">
+                  <div class="mdc-notched-outline__leading"></div>
+                  <div class="mdc-notched-outline__notch">
+                    <%= f.label :password_confirmation, "Repita a senha", {class: 'mdc-floating-label'} %>
+                  </div>
+                  <div class="mdc-notched-outline__trailing"></div>
+                </div>
+                <div class="mdc-line-ripple"></div>
+              </div>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid--align-right">
+              <%= f.submit "OK", {class: 'me-button me-button--small mdc-button'} %>
+            </div>
+
+            <%= link_to user_google_oauth2_omniauth_authorize_path do %>
+              <div class="me-login-buttons me-login-buttons--divider mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                <div class="me-button me-button--gmail">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 533.5 544.3">
+                    <path d="M533.5 278.4c0-18.5-1.5-37.1-4.7-55.3H272.1v104.8h147c-6.1 33.8-25.7 63.7-54.4 82.7v68h87.7c51.5-47.4 81.1-117.4 81.1-200.2z" fill="#4285f4"/>
+                    <path d="M272.1 544.3c73.4 0 135.3-24.1 180.4-65.7l-87.7-68c-24.4 16.6-55.9 26-92.6 26-71 0-131.2-47.9-152.8-112.3H28.9v70.1c46.2 91.9 140.3 149.9 243.2 149.9z" fill="#34a853"/>
+                    <path d="M119.3 324.3c-11.4-33.8-11.4-70.4 0-104.2V150H28.9c-38.6 76.9-38.6 167.5 0 244.4l90.4-70.1z" fill="#fbbc04"/>
+                    <path d="M272.1 107.7c38.8-.6 76.3 14 104.4 40.8l77.7-77.7C405 24.6 339.7-.8 272.1 0 169.2 0 75.1 58 28.9 150l90.4 70.1c21.5-64.5 81.8-112.4 152.8-112.4z" fill="#ea4335"/>
+                  </svg>
+                  Criar conta com gmail
+                </div>
+            <% end %>
+            <%= link_to user_facebook_omniauth_authorize_path do %>
+              <div class="me-button me-button--facebook" onclick="loginWithFacebook()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14222 14222" shape-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="nonzero">
+                  <path d="M14222 7111C14222 3184 11038 0 7111 0S0 3184 0 7111c0 3549 2600 6491 6000 7025V9167H4194V7111h1806V5544c0-1782 1062-2767 2686-2767 778 0 1592 139 1592 139v1750h-897c-883 0-1159 548-1159 1111v1334h1972l-315 2056H8222v4969c3400-533 6000-3475 6000-7025z" fill="#1977f3"/>
+                  <path d="M9879 9167l315-2056H8222V5777c0-562 275-1111 1159-1111h897V2916s-814-139-1592-139c-1624 0-2686 984-2686 2767v1567H4194v2056h1806v4969c362 57 733 86 1111 86s749-30 1111-86V9167h1657z" fill="#fefefe"/>
+                </svg>
+                Criar conta com facebook
+              </div>
+            <% end %>
+            </div>
+          </div>
+        </div>
+
+      <% end %>
+      <%#= render "users/shared/links" %>
+    </div>
   </div>
+</section>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
