Add recaptcha to user registration

--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -76,6 +76,11 @@
               </div>
             </div>
 
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
+                <%= recaptcha_tags %>
+              </div>
+            </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid--align-right">
               <%= f.submit "OK", {class: 'me-button me-button--small mdc-button'} %>
             </div>
