--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -17,9 +17,9 @@
     [data-section-disposition="vertical"] & {
       margin: 6px 0 35px 0;
     }
-    .me-page--profile & {
-      margin: 0 -16px 35px -16px;
-    }
+    //.me-page--profile & {
+    //  margin: 0 -16px 35px -16px;
+    //}
   }
 
   // .me-event-single__similar & {
