--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -195,6 +195,7 @@
         <div class="me-collection__load-more me-collection__load-more--vertical is-hoverable"
              data-action="click->section#loadMore"
              data-target="section.loadMoreButton">
+          Mostrar mais
         </div>
       <% end %>
       <% unless data[:collection][:events] %>
