--- a/web/app/views/feeds/week.html.erb
+++ b/web/app/views/feeds/week.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile is-animated">
+<section class="me-page  is-animated">
 
   <% content_for :canonical_url, week_events_url %>
   <% content_for :amp_url, week_events_url(format: :amp) %>
