--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile is-animated">
+<section class="me-page  is-animated">
   <% content_for :canonical_url, organizer_url(@organizer, format: :html) %>
 
   <%= notice %>
