--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page me-page--profile is-animated">
+<section class="me-page is-animated">
   <% content_for :canonical_url, place_url(@place, format: :html) %>
 
   <%= notice %>
