--- a/web/app/assets/stylesheets/components/me-user-suggestions.scss
+++ b/web/app/assets/stylesheets/components/me-user-suggestions.scss
@@ -11,13 +11,17 @@
 
   &__inner {
     display: grid;
-    grid-template-columns: minmax(40px, 1fr);
+    grid-template-columns: 50px 50px;
     grid-auto-flow: column;
     grid-gap: 0 12px;
     padding: 0 24px;
-    width: max-content;
+    @include add-horizontal-scroll-wrapper;
+    @include no-scroll-bar;
     @include desktop-only {
       padding: 0;
+    }
+    .me-collection__title-custom & {
+      grid-template-columns: 36px 36px;
     }
   }
 
@@ -27,6 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include add-horizontal-scroll-items;
 
     .me-collection__title-custom & {
       width: 36px;
