--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -11,9 +11,9 @@
         <div class="me-chip-set__wrapper">
           <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
             <% @events_found&.suggestions&.each do |suggestion| %>
-            <a href="<%= search_index_path({q: suggestion}) %>" class="me-chip mdc-chip">
-              <span class="mdc-chip__text"><%= suggestion %></span>
-            </a>
+              <a href="<%= search_index_path({q: suggestion}) %>" class="me-chip mdc-chip">
+                <span class="mdc-chip__text"><%= suggestion %></span>
+              </a>
             <% end %>
           </div>
         </div>
@@ -25,31 +25,39 @@
     <section class="me-section">
       <div class="me-section__inner">
         <%= render partial: "components/collection/collection", locals: {
-          data:  @data,
-          props: {
-            infinite_scroll: true
-          }
+            data:  @data,
+            props: {
+                infinite_scroll: true
+            }
         } %>
       </div>
     </section>
   <% elsif @data&.dig(:collection, :detail, :total_events_in_collection).try { |counter| counter == 0 } %>
     <section class="me-section" style="margin: 0 auto 25px auto;">
       <div class="me-section__inner">
-        <div class="me-section-head">
-          <h2>Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
-        </div>
+        <h2 class="me-section__title">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
       </div>
     </section>
   <% else %>
-    <section class="me-section" style="margin: 0 auto 25px auto;">
+    <section class="me-section">
+      <div class="me-section__inner">
+        <h2 class="me-section__title">Pessoas</h2>
+        <%= render partial: "components/user_suggestions", locals: {
+            data: {
+                following_users: User.recents
+            }
+        } %>
+      </div>
+    </section>
+    <section class="me-section">
       <div class="me-section__inner">
         <h2 class="me-section__title">Categorias</h2>
         <div class="me-chip-set__wrapper">
           <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
             <% @categories.each do |category| %>
-            <a href="<%= category_events_path category %>" class="me-chip mdc-chip <%= 'mdc-chip--selected' if category == params[:category] %>">
-              <span class="mdc-chip__text"><%= category %></span>
-            </a>
+              <a href="<%= category_events_path category %>" class="me-chip mdc-chip <%= 'mdc-chip--selected' if category == params[:category] %>">
+                <span class="mdc-chip__text"><%= category %></span>
+              </a>
             <% end %>
           </div>
         </div>
