Refactor event single to use img tag

--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -96,6 +96,12 @@
       border-radius: 0;
       box-shadow: none;
     }
+
+    & img {
+      width: inherit;
+      height: inherit;
+      object-fit: cover;
+    }
   }
 
   &__name {
