Adjust in collection style

--- a/web/app/assets/stylesheets/components/me-collection.scss
+++ b/web/app/assets/stylesheets/components/me-collection.scss
@@ -76,6 +76,7 @@
   &__head {
     margin-bottom: 24px;
     @include mobile-only {
+      margin-bottom: 12px;
       border-bottom: 1px solid $surface-secondary-color;
     }
   }
