--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -152,8 +152,8 @@ section {
     line-height: 120%;
 
     @include mobile-only {
-      font-size: 26px;
-      line-height: 30px;
+      font-size: 22px;
+      line-height: 26px;
       text-align: left;
       max-width: 90%;
       margin: 0 0 12px 0;
@@ -172,7 +172,7 @@ section {
     margin: 0 0 0 0;
     max-width: 1080px;
     @include mobile-only {
-      font-size: 15px;
+      font-size: 14px;
       text-align: left;
       line-height: 1.6em;
     }
@@ -313,10 +313,10 @@ section {
     -webkit-user-select: none;
     @include mobile-only {
       width: 196px;
-      height: 65px;
+      height: 62px;
       font-size: 18px;
       font-weight: 600;
-      margin: 0 12px 6px 0;
+      margin: 0 12px 12px 0;
       //.is-pwa & {
       //  width: calc(100% - 48px);
       //  margin: 0 auto 0 auto;
@@ -348,7 +348,7 @@ section {
       color: $font-secondary-color;
       width: 130px;
       margin: 0 0 0 0;
-      box-shadow: $surface-z10-box-shadow;
+      box-shadow: 0px 0px 30px rgba(0,0,0,0.16);
 
       &:hover {
         color: $font-secondary-color;
@@ -590,7 +590,7 @@ section {
   overflow: hidden;
   @include mobile-only {
     height: 100vh;
-    min-height: 730px;
+    min-height: 780px;
   }
 
   &__wrapper {
