Adjust event date style and columns size

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -11,7 +11,7 @@ $brand-color-high-contrast: #0C0F0A;
 
 $border-color: #E1E1E1;
 
-$font-primary-family: 'M PLUS Rounded 1c', sans-serif;
+$font-primary-family: 'Roboto', sans-serif; // 'M PLUS Rounded 1c', sans-serif
 $font-secondary-family: 'Roboto', sans-serif;
 
 $section-padding-phone: 24px;
