--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -73,6 +73,9 @@
     font-size: 11px;
     background: $surface-secondary-color;
     color: $font-tertiary-color;
+    @include mobile-only {
+      font-size: 8px;
+    }
 
     & a {
       color: $font-tertiary-color;
