--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -16,7 +16,7 @@ $description-color: $font-secondary-color;
     font-size: 14px;
     border: 0;
     box-shadow: none;
-    margin:6px 0 0 0;
+    margin: 0 0 0 0;
     position: relative;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     @include mobile-only {
@@ -206,6 +206,9 @@ $description-color: $font-secondary-color;
       color: lighten($font-tertiary-color, 10%);
       font-size: 10px;
       line-height: 1;
+      padding: 0 0 0 6px;
+      margin: 12px 0 0 0;
+      text-transform: capitalize;
     }
 
     &.hoje {
@@ -254,6 +257,9 @@ $description-color: $font-secondary-color;
     margin: 6px 0 0 0;
     padding: 0 0 0 6px;
     font-weight: 500;
+    @include mobile-only {
+      font-size: 13px;
+    }
     [data-section-disposition="vertical"] & {
       @include mobile-only {
         font-size: 18px;
@@ -261,7 +267,7 @@ $description-color: $font-secondary-color;
       }
     }
     .me-similar & {
-      font-size: 14px;
+      font-size: 12px;
     }
     .me-card--empty & {
       & a {
@@ -291,6 +297,9 @@ $description-color: $font-secondary-color;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    @include mobile-only {
+      font-size: 8px;
+    }
     .me-card--empty & {
       color: $surface-secondary-color;
       background-color: $surface-secondary-color;
@@ -438,12 +447,13 @@ $description-color: $font-secondary-color;
       transition: 0.2s all ease 0s;
       @include mdc-icon-button-icon-size($width: 20px, $height: 20px, $padding: 10px);
 
-      & svg {
-        fill: lighten($font-tertiary-color, 30%);
+      @include mobile-only {
+        @include mdc-icon-button-icon-size($width: 16px, $height: 16px, $padding: 8px);
+        display: block;
       }
 
-      @include mobile-only {
-        display: block;
+      & svg {
+        fill: lighten($font-tertiary-color, 30%);
       }
 
       &--on {
