--- a/web/app/assets/stylesheets/components/me-see-all.scss
+++ b/web/app/assets/stylesheets/components/me-see-all.scss
@@ -4,10 +4,13 @@
   align-items: center;
   width: 66px;
   min-width: 66px;
-  justify-content: space-between;
+  justify-content: flex-end;
   color: $font-tertiary-color;
   font-weight: 400;
   padding: 0 0 0 6px;
+  @include mobile-only {
+    font-size: 9px;
+  }
 
   [data-controller="feeds"][data-action="index"] & {
     //@include mobile-only {
@@ -17,5 +20,6 @@
 
   & svg {
     fill: $border-color;
+    margin-left: 3px;
   }
 }
