--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -14,6 +14,7 @@
     width: auto;
     padding: 0;
     margin: 6px 12px 35px 12px;
+    min-height: 220px;
     [data-section-disposition="vertical"] & {
       margin: 6px 0 35px 0;
     }
