--- a/web/app/assets/stylesheets/components/me-user-suggestions.scss
+++ b/web/app/assets/stylesheets/components/me-user-suggestions.scss
@@ -11,7 +11,8 @@
 
   &__inner {
     display: grid;
-    grid-template-columns: 50px 50px;
+    grid-template-columns: inherit;
+    grid-auto-columns: 50px;
     grid-auto-flow: column;
     grid-gap: 0 12px;
     padding: 0 24px;
