Adjust week collection in feed

--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -90,15 +90,17 @@
         <!-- </div>
       </div> -->
     <%# end %>
-    <div class="me-card__date is-hoverable <%= event.day_of_week['decorator'].parameterize %>"
-          data-target="event.date"
-          onclick="Turbolinks.visit('<%= day_events_path event.day_of_week['date'].strftime('%d-%m-%Y') %>')">
-      <span>
-        <i></i> <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
-      </span>
-      <span class="me-card__date-distance-in-words">
-         · <%= event.first_day_time.to_datetime.iso8601 > DateTime.now.iso8601 ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
-      </span>
+    <div class="me-card__primary-section">
+      <div class="me-card__date is-hoverable <%= event.day_of_week['decorator'].parameterize %>"
+        data-target="event.date"
+        onclick="Turbolinks.visit('<%= day_events_path event.day_of_week['date'].strftime('%d-%m-%Y') %>')">
+        <span>
+          <i></i> <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
+        </span>
+        <span class="me-card__date-distance-in-words">
+          · <%= event.first_day_time.to_datetime.iso8601 > DateTime.now.iso8601 ? "Daqui #{distance_of_time_in_words event.first_day_time, DateTime.now}" : "Iniciou há #{distance_of_time_in_words event.first_day_time, DateTime.now}" %>
+        </span>
+      </div>
     </div>
     <div class="me-card__secondary-section">
       <div class="me-card__title"
