--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -176,7 +176,11 @@ $description-color: $font-secondary-color;
     display: flex;
     flex-wrap: wrap;
     z-index: 5;
-    margin: 0 0 12px 6px;
+    margin: 0 0 0 6px;
+    font-size: 10px;
+    @include mobile-only {
+      font-size: 9px;
+    }
     .me-card--single & {
       color: $font-primary-color;
       text-transform: none;
@@ -204,11 +208,11 @@ $description-color: $font-secondary-color;
       flex-direction: column;
       align-items: flex-start;
       color: lighten($font-tertiary-color, 10%);
-      font-size: 10px;
+      // font-size: 10px;
       line-height: 1;
-      padding: 0 0 0 6px;
+      padding: 0;
       margin: 12px 0 0 0;
-      text-transform: capitalize;
+      text-transform: uppercase;
     }
 
     &.hoje {
@@ -239,11 +243,11 @@ $description-color: $font-secondary-color;
   }
 
   &__date-distance-in-words {
-    font-size: 10px;
+    // font-size: 10px;
     line-height: 1;
     padding: 2px 0 0 0;
     @include mobile-only {
-      font-size: 10px;
+      // font-size: 10px;
     }
 
     .me-saves & {
