--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -58,30 +58,33 @@
     }
 
     & .mdc-chip {
+      border-radius: 20px;
       font-weight: 500;
       font-size: 10px;
       height: auto;
       line-height: 1em;
-      padding: 10px 8px;
+      padding: 8px 20px;
       margin: 3px;
       font-family: $font-secondary-family;
-      border-radius: 3px;
+      // border-radius: 3px;
       color: $font-tertiary-color;
-      background-color: $background-color;
+      background-color: transparent;
       border: $chip-border-size solid $border-color;
-      text-transform: uppercase;
+      text-transform: capitalize;
       transition: $chip-transition;
       @include mobile-only {
-        //padding: 12px 8px;
+        padding: 8px 20px;
+        font-size: 11px;
+        font-weight: 600;
       }
     }
 
     & .mdc-chip--selected {
       color: $chip-filter-color-active;
       background-color: $chip-filter-background-active;
-      border: $chip-border-size solid $chip-filter-border-color-active;
+      border: 0;
       @include mobile-only {
-        border: $chip-border-size solid $chip-filter-background-active;
+        border: 0;
       }
     }
   }
