Add background color for movies covers

--- a/web/app/assets/stylesheets/components/me-movie.scss
+++ b/web/app/assets/stylesheets/components/me-movie.scss
@@ -43,6 +43,7 @@
   &__cover {
     display: flex;
     justify-content: center;
+    background-color: $surface-secondary-color;
     & img {
       border-radius: $media-border-radius;
       width: 100%;
