Adjust about in welcome page

--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -179,17 +179,17 @@
         <div class="about__item" style="grid-area: r1">
           <h3 class="h3">O que é o Alegreme?</h3>
           <div class="about__content">
-            Alegreme é um aplicativo para celular e desktop que busca eventos, atividades, promoções e serviços de categorias como lazer e educação na cidade de Porto Alegre. O aplicativo aprende o que você gosta e não gosta para lhe sugerir experiências únicas com base no seu gosto.
+            Alegreme é um projeto de <a href="https://www.instagram.com/jonataseduardo/">@jonastaseduardo</a> que usa inteligência artificial para buscar, categorizar e sugerir eventos de entretenimento na cidade. O aplicativo está em constante evolução, sendo que a cada dia que passa e quanto mais pessoas usam, melhor ele fica.
           </div>
         </div>
-        <div class="about__item" style="grid-area: r2">
+        <!-- <div class="about__item" style="grid-area: r2">
           <h3 class="h3">
             Funciona só em Porto Alegre?
           </h3>
           <div class="about__content">
             Sim, o Alegreme é um projeto local com grandes ambições mas está começando somente por Porto Alegre. Queremos experimentar e testar muitas coisas para criar um negócio inovador com foco nos usuários, ou seja, queremos fazer algo diferente e bem feito aqui na nossa cidade. Se funcionar e fizer sentido podemos espalhar pelo Brasil.
           </div>
-        </div>
+        </div> -->
         <!-- <div class="about__item" style="grid-area: r3">
           <h3 class="h3">
             Quem faz?
@@ -207,14 +207,14 @@
             Se o seu evento ou experiência está na internet em sites que tratam sobre Porto Alegre provavelmtente ele está no Alegreme, pois o aplicativo funciona semelhante ao Google, buscando tudo que há de eventos e experiências em sites de Porto Alegre. O algorítimo cria, edita, categoriza, escolhe para quem exibir... Praticamente faz tudo sozinho.
           </div>
         </div>
-        <!-- <div class="about__item" style="grid-area: r4">
+        <div class="about__item" style="grid-area: r2">
           <h3 class="h3">
             Que tecnologia vocês usam?
           </h3>
           <div class="about__content">
-            As liguagens são muitas, vão de Ruby a Python; de Javascript a Java. São 6 serviços que rodam de forma isolada. Alguns responsáveis por catar dados da internet como o Google, outros em classificar estes dados, como o Pinterest e outro em aprender sobre os dados e usuários, como o Netflix. Para ser ágil no desenvolvimento, na versão mobile estamos usando PWA. E tudo tendo como core inteligência artificial, como você deve ter imaginado :)
+            As liguagens são muitas, vão de Ruby a Python; de Javascript a Java. São 6 serviços que rodam de forma isolada. Alguns responsáveis por catar dados da internet como o Google, outros em classificar estes dados, como o Pinterest e outro em aprender sobre os dados e usuários, como o Netflix.
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
   </div>
